tests/negative/parser/fmt/no_double_end_brace.orng
// no_double_end_brace.orng:6:25: error: expected `}`
//     try @print("Hello, } world!")
//                        ^
// 
fn main() -> ()!() with core::IO {
    try @print("Hello, } world!")
    .ok
}